# JScriptCC

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
include/jscriptcc/: CCEnvironment.h  CCError.h  CCPreprocessor.h  CCValue.h  Evaluator.h  Generator.h  Parser.h  Scanner.h  StringSlice.h  Tokenizer.h
src/: AST.cpp  CCEnvironment.cpp  CCPreprocessor.cpp  CCSyntax.h  CCValue.cpp  Evaluator.cpp  Generator.cpp  Parser.cpp  Scanner.cpp  StringSlice.cpp  Tokenizer.cpp  UnicodeConversion.cpp
src/detail/: AST.h  CCLexicalRules.h  Evaluator.h  Generator.h  Parser.h  Scanner.h  StringSlice.h  Tokenizer.h  UnicodeConversion.h
tests/: TestFramework.cpp  TestSupport.h  main.cpp  test_environment.cpp  test_errors.cpp  test_expressions.cpp  test_preprocessor.cpp  test_regressions.cpp  test_scanner.cpp
tests/cases/: test_environment.cpp  test_errors.cpp  test_expressions.cpp  test_preprocessor.cpp  test_regressions.cpp  test_scanner.cpp  test_wide_api.cpp
tests/support/: TestFramework.cpp  TestFramework.h  TestSupport.h
